--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,6 +11,7 @@
 
 // Import Bootstrap source files
 @import "node_modules/bootstrap/scss/bootstrap";
+@import 'node_modules/bootstrap-vue/src/index.scss';
 
 // Override core variables
 @import "core-variables";
