--- a/assets/scss/elisyam/modern.scss
+++ b/assets/scss/elisyam/modern.scss
@@ -3037,6 +3037,7 @@ textarea {
   font-size: 1rem;
   line-height: 1.25;
   color: #2c304d;
+  height: auto;
   border: 1px solid #eee;
   border-radius: 4px;
   padding: 0.75rem 1.07rem;
